# routes/api.php
@@ -16,8 +16,11 @@ use App\Http\Controllers\MutasiController;
 |
 */
 
-Route::post('/login', [AuthController::class, 'login']);
+Route::post('/login', [AuthController::class, 'login'])->name('login');
+
+// Protected routes
 Route::middleware('auth:sanctum')->group(function () {
     Route::apiResource('barangs', BarangController::class);
     Route::apiResource('mutasis', MutasiController::class);
+    Route::post('/logout', [AuthController::class, 'logout']);
 });
